Welcome to the Kaguya ChangeLog.


Changelog:

Version 1.26.2

- $profile's "Total Currency Awarded" is now accurately updated through gamble wins.

Version 1.26.1

- The ratelimit has been adjusted to 3 commands every 4.25 seconds (was 5 seconds).
- Performance/stability increases (account data is now saved every 5 seconds instead of multiple times per second).
- If a user has previously been ratelimited, but does not exceed the rate limit for thirty days,
    their ratelimit strikes will be reset.

Version 1.26

- This update features a long awaited feature: The Kaguya Ratelimit!
    - Kaguya now has a global command rate limit of 3 commands every 5 seconds. Anything in
    excess will result in a "ratelimit strike".
    - Upon receiving a ratelimit strike, Kaguya will DM you letting you know that you are
    abusing the ratelimit and have been temporarily blacklisted from the bot.
    - The ratelimit strikes each have an increasingly long blacklist duration, depending on 
    how many strikes you have.
        - First strike: 60 seconds
        - Second strike: 10 minutes
        - Third strike: 60 minutes
        - Fourth strike: 12 hours
        - Fifth strike: Permanent (900,000 days), points and EXP reset to zero.
    - The ratelimit applies to all commands globally.
- osu! beatmap linkage now no longer works if the user's account is blacklisted.
- osu! beatmap linkage is now treated as a command and will apply to the ratelimit.

Version 1.25.1

- Gambling stats are now logged in the console.
- Released a hotfix that fixed a bug where $n bomb would not work most of the time.
    - This reverts the feature where a user is prompted to spend their diamonds
    to reset their $n bomb cooldown if they have enough points.

Version 1.25

- If a user runs out of "$n bomb" uses for the hour, it will now display this in the console.
- Whenever a shard is connected, it will now be announced in a kaguya support text channel.