@@ -1,20 +1,15 @@
 ﻿#region NSFW commands...Proceed with caution!!
 #endregion
 
+using Discord;
+using Discord.Addons.Interactive;
 using Discord.Commands;
 using Kaguya.Core;
-using NekosSharp;
-using System;
-using System.Diagnostics;
-using System.Threading.Tasks;
 using Kaguya.Core.Embed;
-using EmbedType = Kaguya.Core.Embed.EmbedColor;
-using Kaguya.Core.UserAccounts;
 using Kaguya.Core.Server_Files;
-using System.IO;
-using System.Linq;
-using Discord.Addons.Interactive;
-using Discord;
+using Kaguya.Core.UserAccounts;
+using System;
+using System.Threading.Tasks;
 
 namespace Kaguya.Modules.NSFW
 {
@@ -28,16 +23,44 @@ namespace Kaguya.Modules.NSFW
             await Context.Channel.SendMessageAsync(embed: embed.Build());
         }
 
-        [Command()]
+        [Command("", RunMode = RunMode.Async)]
         [RequireNsfw]
         public async Task NFSWRandom()
         {
             Random rand = new Random();
             var imageCollection = Global.stillsCollection;
+            var userAccount = UserAccounts.GetAccount(Context.User);
+
+            if (userAccount.NSFWAgeVerified == "false")
+            {
+                embed.WithTitle("NSFW Age Verification");
+                embed.WithDescription($"{Context.User.Mention} You must be 18 years old to use the NSFW module. To acknowledge " +
+                    $"that you are 18 years of age, please reply with \"I confirm.\" (without quotation marks).");
+
+                var message = await ReplyAsync(embed: embed.Build());
+                var response = await NextMessageAsync(timeout: TimeSpan.FromSeconds(20));
+
+                if (!response.Content.ToLower().Contains("i confirm"))
+                {
+                    embed.WithDescription($"{Context.User.Mention} You did not reply with the proper response needed for verification. " +
+                        $"Therefore, your NSFW status remains unverified, and this operation will be cancelled.");
+                    await BE();
+                    await message.DeleteAsync();
+                    return;
+                }
+                else
+                {
+                    userAccount.NSFWAgeVerified = $"Successfully verified their age at {DateTime.Now}";
+                    embed.WithDescription($"{Context.User.Mention} You have successfully verified that you are of age to view " +
+                        $"this content.");
+                    await BE();
+                    await message.DeleteAsync();
+                }
+            }
             await Context.Channel.SendFileAsync(imageCollection[rand.Next(imageCollection.Length)]);
         }
 
-        [Command("bomb")]
+        [Command("bomb", RunMode = RunMode.Async)]
         [RequireNsfw]
         public async Task NSFWBomb()
         {
@@ -47,6 +70,33 @@ namespace Kaguya.Modules.NSFW
             bool isSupporter = userAccount.IsSupporter;
             Logger logger = new Logger();
             Random rand = new Random();
+
+            if(userAccount.NSFWAgeVerified == "false")
+            {
+                embed.WithTitle("NSFW Age Verification");
+                embed.WithDescription($"{Context.User.Mention} You must be 18 years old to use the NSFW module. To acknowledge " +
+                    $"that you are 18 years of age, please reply with \"I confirm.\" (without quotation marks).");
+
+                var message = await ReplyAsync(embed: embed.Build());
+                var response = await NextMessageAsync(timeout: TimeSpan.FromSeconds(20));
+
+                if (!response.Content.ToLower().Contains("i confirm"))
+                {
+                    embed.WithDescription($"{Context.User.Mention} You did not reply with the proper response needed for verification. " +
+                        $"Therefore, your NSFW status remains unverified, and this operation will be cancelled.");
+                    await BE();
+                    await message.DeleteAsync();
+                    return;
+                }
+                else
+                {
+                    userAccount.NSFWAgeVerified = $"Successfully verified their age at {DateTime.Now}";
+                    embed.WithDescription($"{Context.User.Mention} You have successfully verified that you are of age to view " +
+                        $"this content.");
+                    await BE();
+                    await message.DeleteAsync();
+                }
+            }
 
             if (difference.TotalSeconds < 0)
             {
@@ -76,181 +126,43 @@ namespace Kaguya.Modules.NSFW
             }
         }
 
-        [Command("gif")]
+        [Command("gif", RunMode = RunMode.Async)]
         [RequireNsfw]
         public async Task Gif()
         {
             Random rand = new Random();
             var imageCollection = Global.gifsCollection;
             var gif = imageCollection[rand.Next(imageCollection.Length)];
+            var userAccount = UserAccounts.GetAccount(Context.User);
+
+            if (userAccount.NSFWAgeVerified == "false")
+            {
+                embed.WithTitle("NSFW Age Verification");
+                embed.WithDescription($"{Context.User.Mention} You must be 18 years old to use the NSFW module. To acknowledge " +
+                    $"that you are 18 years of age, please reply with \"I confirm.\" (without quotation marks).");
+
+                var message = await ReplyAsync(embed: embed.Build());
+                var response = await NextMessageAsync(timeout: TimeSpan.FromSeconds(20));
+
+                if (!response.Content.ToLower().Contains("i confirm"))
+                {
+                    embed.WithDescription($"{Context.User.Mention} You did not reply with the proper response needed for verification. " +
+                        $"Therefore, your NSFW status remains unverified, and this operation will be cancelled.");
+                    await BE();
+                    await message.DeleteAsync();
+                    return;
+                }
+                else
+                {
+                    userAccount.NSFWAgeVerified = $"Successfully verified their age at {DateTime.Now}";
+                    embed.WithDescription($"{Context.User.Mention} You have successfully verified that you are of age to view " +
+                        $"this content.");
+                    await BE();
+                    await message.DeleteAsync();
+                }
+            }
+
             await Context.Channel.SendFileAsync(gif);
         }
-
-        //[Command("lewd")]
-        //[RequireNsfw]
-        //public async Task LewdNeko()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("boobs")]
-        //[RequireNsfw]
-        //public async Task Boobs()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("anal")]
-        //[RequireNsfw]
-        //public async Task Anal()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("bdsm")]
-        //[RequireNsfw]
-        //public async Task BDSM()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("bj")]
-        //[RequireNsfw]
-        //public async Task Blowjob()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("classic")]
-        //[RequireNsfw]
-        //public async Task Classic()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("cum")]
-        //[RequireNsfw]
-        //public async Task Cum()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("feet")]
-        //[RequireNsfw]
-        //public async Task Feet()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("eroyuri")]
-        //[RequireNsfw]
-        //public async Task EroYuri()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("pussy")]
-        //[RequireNsfw]
-        //public async Task Pussy()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("solo")]
-        //[RequireNsfw]
-        //public async Task Solo()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("hentai")]
-        //[RequireNsfw]
-        //public async Task Hentai()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("avatar")]
-        //[RequireNsfw]
-        //public async Task KetaAvatar()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("trap")]
-        //[RequireNsfw]
-        //public async Task Trap()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-        //[Command("yuri")]
-        //[RequireNsfw]
-        //public async Task Yuri()
-        //{
-        //    string cmdPrefix = Servers.GetServer(Context.Guild).commandPrefix;
-        //    embed.WithDescription($"All tags have temporarily been disabled to ensure compliance with Discord's Terms of Service. " +
-        //        $"Please use `{cmdPrefix}n`, `{cmdPrefix}n bomb`, or `{cmdPrefix}n gif` for the time being. These images are guaranteed to be TOS compliant.");
-        //    embed.WithFooter("We apologize for any inconvenience. We are working hard to return all tags as soon as possible.");
-        //    await BE();
-        //}
-
-
     }
 }
